--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -96,7 +96,7 @@
           <string>Clone</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources.qrc">
+          <iconset>
            <normaloff>:/image/clone.svg</normaloff>:/image/clone.svg</iconset>
          </property>
          <property name="iconSize">
@@ -131,7 +131,7 @@
           <string>Fetch</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources.qrc">
+          <iconset>
            <normaloff>:/image/fetch.svg</normaloff>:/image/fetch.svg</iconset>
          </property>
          <property name="iconSize">
@@ -166,7 +166,7 @@
           <string>Pull</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources.qrc">
+          <iconset>
            <normaloff>:/image/pull.svg</normaloff>:/image/pull.svg</iconset>
          </property>
          <property name="iconSize">
@@ -201,7 +201,7 @@
           <string>Push</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources.qrc">
+          <iconset>
            <normaloff>:/image/push.svg</normaloff>:/image/push.svg</iconset>
          </property>
          <property name="iconSize">
@@ -252,7 +252,7 @@
           <string>Terminal</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources.qrc">
+          <iconset>
            <normaloff>:/image/terminal.svg</normaloff>:/image/terminal.svg</iconset>
          </property>
          <property name="iconSize">
@@ -287,7 +287,7 @@
           <string>Explorer</string>
          </property>
          <property name="icon">
-          <iconset resource="../resources.qrc">
+          <iconset>
            <normaloff>:/image/explorer.svg</normaloff>:/image/explorer.svg</iconset>
          </property>
          <property name="iconSize">
@@ -745,7 +745,7 @@
                   <string>Unstage</string>
                  </property>
                  <property name="icon">
-                  <iconset resource="../resources.qrc">
+                  <iconset>
                    <normaloff>:/image/unstage.svg</normaloff>:/image/unstage.svg</iconset>
                  </property>
                  <property name="iconSize">
@@ -774,7 +774,7 @@
                   <string>Select all</string>
                  </property>
                  <property name="icon">
-                  <iconset resource="../resources.qrc">
+                  <iconset>
                    <normaloff>:/image/selall.svg</normaloff>:/image/selall.svg</iconset>
                  </property>
                  <property name="iconSize">
@@ -809,7 +809,7 @@
                   <string>Stage</string>
                  </property>
                  <property name="icon">
-                  <iconset resource="../resources.qrc">
+                  <iconset>
                    <normaloff>:/image/stage.svg</normaloff>:/image/stage.svg</iconset>
                  </property>
                  <property name="iconSize">
@@ -838,7 +838,7 @@
                   <string>Commit</string>
                  </property>
                  <property name="icon">
-                  <iconset resource="../resources.qrc">
+                  <iconset>
                    <normaloff>:/image/commit.svg</normaloff>:/image/commit.svg</iconset>
                  </property>
                  <property name="iconSize">
@@ -961,7 +961,7 @@
      <x>0</x>
      <y>0</y>
      <width>848</width>
-     <height>24</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -990,6 +990,7 @@
     <addaction name="action_edit_git_config"/>
     <addaction name="action_edit_global_gitconfig"/>
     <addaction name="action_set_config_user"/>
+    <addaction name="action_set_gpg_verification"/>
     <addaction name="separator"/>
     <addaction name="action_edit_settings"/>
    </widget>
@@ -1138,7 +1139,7 @@
               <string/>
              </property>
              <property name="icon">
-              <iconset resource="../resources.qrc">
+              <iconset>
                <normaloff>:/image/redsquare.svg</normaloff>:/image/redsquare.svg</iconset>
              </property>
              <property name="iconSize">
@@ -1241,7 +1242,7 @@
   </action>
   <action name="action_push">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset>
      <normaloff>:/image/push.svg</normaloff>:/image/push.svg</iconset>
    </property>
    <property name="text">
@@ -1276,7 +1277,7 @@
   </action>
   <action name="action_pull">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset>
      <normaloff>:/image/pull.svg</normaloff>:/image/pull.svg</iconset>
    </property>
    <property name="text">
@@ -1285,7 +1286,7 @@
   </action>
   <action name="action_fetch">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset>
      <normaloff>:/image/fetch.svg</normaloff>:/image/fetch.svg</iconset>
    </property>
    <property name="text">
@@ -1327,7 +1328,7 @@
   </action>
   <action name="action_clone">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset>
      <normaloff>:/image/clone.svg</normaloff>:/image/clone.svg</iconset>
    </property>
    <property name="text">
@@ -1410,7 +1411,7 @@
   </action>
   <action name="action_stop_process">
    <property name="icon">
-    <iconset resource="../resources.qrc">
+    <iconset>
      <normaloff>:/image/redsquare.svg</normaloff>:/image/redsquare.svg</iconset>
    </property>
    <property name="text">
@@ -1433,6 +1434,11 @@
   <action name="action_repository_property">
    <property name="text">
     <string>Property...</string>
+   </property>
+  </action>
+  <action name="action_set_gpg_verification">
+   <property name="text">
+    <string>Set GPG Verification</string>
    </property>
   </action>
  </widget>
@@ -1495,8 +1501,6 @@
   <tabstop>listWidget_files</tabstop>
   <tabstop>widget_diff_view</tabstop>
  </tabstops>
- <resources>
-  <include location="../resources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
