--- a/src/SettingDirectoriesForm.ui
+++ b/src/SettingDirectoriesForm.ui
@@ -65,6 +65,25 @@
     </widget>
    </item>
    <item>
+    <widget class="QGroupBox" name="groupBox_4">
+     <property name="title">
+      <string>GPG command (option)</string>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_6">
+      <item>
+       <widget class="QLineEdit" name="lineEdit_gpg_command"/>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_select_gpg_command">
+        <property name="text">
+         <string>Browse...</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
       <string>Default working folder</string>
@@ -98,6 +117,16 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>lineEdit_git_command</tabstop>
+  <tabstop>pushButton_select_git_command</tabstop>
+  <tabstop>lineEdit_file_command</tabstop>
+  <tabstop>pushButton_select_file_command</tabstop>
+  <tabstop>lineEdit_gpg_command</tabstop>
+  <tabstop>pushButton_select_gpg_command</tabstop>
+  <tabstop>lineEdit_default_working_dir</tabstop>
+  <tabstop>pushButton_browse_default_working_dir</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
