--- a/src/ConfigSigningDialog.ui
+++ b/src/ConfigSigningDialog.ui
@@ -31,7 +31,7 @@
        <widget class="QComboBox" name="comboBox_sign_global"/>
       </item>
       <item row="1" column="0">
-       <widget class="QLabel" name="label_8">
+       <widget class="QLabel" name="label_local">
         <property name="text">
          <string>local</string>
         </property>
