--- a/src/SetGpgSigningDialog.ui
+++ b/src/SetGpgSigningDialog.ui
@@ -116,6 +116,13 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <widget class="QPushButton" name="pushButton_configure">
+       <property name="text">
+        <string>Configure...</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
