--- a/src/CommitPropertyDialog.ui
+++ b/src/CommitPropertyDialog.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Commit Property</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <widget class="ReadOnlyLineEdit" name="lineEdit_description">
      <property name="font">
@@ -25,45 +25,68 @@
     </widget>
    </item>
    <item>
-    <layout class="QFormLayout" name="formLayout">
-     <property name="fieldGrowthPolicy">
-      <enum>QFormLayout::ExpandingFieldsGrow</enum>
-     </property>
-     <property name="labelAlignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-     </property>
-     <property name="verticalSpacing">
-      <number>3</number>
-     </property>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label_4">
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <item>
+      <layout class="QFormLayout" name="formLayout">
+       <property name="fieldGrowthPolicy">
+        <enum>QFormLayout::ExpandingFieldsGrow</enum>
+       </property>
+       <property name="labelAlignment">
+        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+       </property>
+       <property name="verticalSpacing">
+        <number>3</number>
+       </property>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_4">
+         <property name="text">
+          <string>Date</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="ReadOnlyLineEdit" name="lineEdit_date"/>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_5">
+         <property name="text">
+          <string>Author</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="ReadOnlyLineEdit" name="lineEdit_author"/>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>Mail</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="ReadOnlyLineEdit" name="lineEdit_mail"/>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_user_avatar">
+       <property name="minimumSize">
+        <size>
+         <width>64</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>64</width>
+         <height>16777215</height>
+        </size>
+       </property>
        <property name="text">
-        <string>Date</string>
+        <string/>
        </property>
       </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="ReadOnlyLineEdit" name="lineEdit_date"/>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label_5">
-       <property name="text">
-        <string>Author</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="ReadOnlyLineEdit" name="lineEdit_author"/>
-     </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="label_6">
-       <property name="text">
-        <string>Mail</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="ReadOnlyLineEdit" name="lineEdit_mail"/>
      </item>
     </layout>
    </item>
@@ -75,7 +98,7 @@
      <property name="frameShadow">
       <enum>QFrame::Plain</enum>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
+     <layout class="QVBoxLayout" name="verticalLayout">
       <property name="leftMargin">
        <number>0</number>
       </property>
@@ -132,39 +155,56 @@
        </layout>
       </item>
       <item>
-       <layout class="QFormLayout" name="formLayout_2">
-        <property name="verticalSpacing">
-         <number>3</number>
-        </property>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label_7">
+       <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <item>
+         <layout class="QFormLayout" name="formLayout_2">
+          <property name="verticalSpacing">
+           <number>3</number>
+          </property>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_7">
+            <property name="text">
+             <string>ID</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="ReadOnlyLineEdit" name="lineEdit_sign_id"/>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_8">
+            <property name="text">
+             <string>Name</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="ReadOnlyLineEdit" name="lineEdit_sign_name"/>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="label_9">
+            <property name="text">
+             <string>Mail</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="ReadOnlyLineEdit" name="lineEdit_sign_mail"/>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_sign_avatar">
+          <property name="minimumSize">
+           <size>
+            <width>64</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="text">
-           <string>ID</string>
+           <string/>
           </property>
          </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="ReadOnlyLineEdit" name="lineEdit_sign_id"/>
-        </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="label_8">
-          <property name="text">
-           <string>Name</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
-         <widget class="ReadOnlyLineEdit" name="lineEdit_sign_name"/>
-        </item>
-        <item row="2" column="0">
-         <widget class="QLabel" name="label_9">
-          <property name="text">
-           <string>Mail</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="1">
-         <widget class="ReadOnlyLineEdit" name="lineEdit_sign_mail"/>
         </item>
        </layout>
       </item>
