--- a/src/EditRemoteDialog.ui
+++ b/src/EditRemoteDialog.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>574</width>
-    <height>122</height>
+    <height>129</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Edit Remote</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
