--- a/src/CommitPropertyDialog.ui
+++ b/src/CommitPropertyDialog.ui
@@ -124,7 +124,7 @@
          <number>2</number>
         </property>
         <item>
-         <widget class="QLabel" name="label">
+         <widget class="QLabel" name="label_signature_icon">
           <property name="minimumSize">
            <size>
             <width>20</width>
@@ -138,7 +138,7 @@
            </size>
           </property>
           <property name="pixmap">
-           <pixmap resource="../resources.qrc">:/image/verified.png</pixmap>
+           <pixmap resource="../resources.qrc">:/image/signature-good.png</pixmap>
           </property>
           <property name="scaledContents">
            <bool>true</bool>
