--- a/src/SettingNetworkForm.ui
+++ b/src/SettingNetworkForm.ui
@@ -11,21 +11,9 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Network</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
-   <property name="leftMargin">
-    <number>0</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
-    <number>0</number>
-   </property>
    <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
@@ -57,13 +45,6 @@
        <widget class="QLineEdit" name="lineEdit_proxy_server"/>
       </item>
      </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="checkBox_get_committer_icon">
-     <property name="text">
-      <string>Get committer's icon from gravatar.com</string>
-     </property>
     </widget>
    </item>
    <item>
