--- a/src/SettingsDialog.ui
+++ b/src/SettingsDialog.ui
@@ -49,7 +49,7 @@
      <item>
       <widget class="QStackedWidget" name="stackedWidget">
        <property name="currentIndex">
-        <number>0</number>
+        <number>2</number>
        </property>
        <widget class="SettingGeneralForm" name="page_general"/>
        <widget class="SettingBehaviorForm" name="page_behavior">
@@ -68,7 +68,7 @@
          </property>
         </layout>
        </widget>
-       <widget class="SettingDirectoriesForm" name="page_directories">
+       <widget class="SettingProgramsForm" name="page_programs">
         <layout class="QVBoxLayout" name="verticalLayout">
          <property name="leftMargin">
           <number>0</number>
@@ -155,12 +155,6 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>SettingDirectoriesForm</class>
-   <extends>QWidget</extends>
-   <header>SettingDirectoriesForm.h</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
    <class>SettingExampleForm</class>
    <extends>QWidget</extends>
    <header>SettingExampleForm.h</header>
@@ -182,6 +176,12 @@
    <class>SettingGeneralForm</class>
    <extends>QWidget</extends>
    <header>SettingGeneralForm.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>SettingProgramsForm</class>
+   <extends>QWidget</extends>
+   <header>SettingProgramsForm.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
