--- a/src/SearchFromGitHubDialog.ui
+++ b/src/SearchFromGitHubDialog.ui
@@ -69,6 +69,9 @@
      <property name="labelAlignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
+     <property name="formAlignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
      <item row="0" column="0">
       <widget class="QRadioButton" name="radioButton_ssh">
        <property name="text">
