--- a/src/SetUserDialog.ui
+++ b/src/SetUserDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>381</width>
-    <height>248</height>
+    <height>279</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -85,18 +85,12 @@
    <item>
     <widget class="QLabel" name="label_avatar">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
-      <size>
-       <width>64</width>
-       <height>64</height>
-      </size>
-     </property>
-     <property name="maximumSize">
       <size>
        <width>64</width>
        <height>64</height>
